--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
   padding-bottom:50px;
  }
 
-@media only screen and(max-width:921px) {
+@media (max-width:1024px) {
     #sidebar {
         display: none;
     }
